<resources>
    <string name="app_name">Admin</string>
    <string name="action_settings">Settings</string>
    <string name="toolbar_title">بحث</string>
    <string name="action_search">بحث</string>
    <string name="search_hint">بحث</string>
    <string name="todo">TODO</string>
    <string name="phone_number">رقم الهاتف</string>
    <string name="password">كلمة السر</string>
    <string name="login">تسجيل الدخول</string>
    <string name="splash_text">مركز الإتقان لتحفيظ القرآن</string>
    <string name="welcome">اهلا و سهلا</string>
    <string name="back_to_your_dashbaord"> في مركز الاتقان لتحفيظ القران</string>
    <string name="students">الدارسين</string>
    <string name="teacher">الشيوخ</string>
    <string name="review_student">مراجعات الدارسين</string>
    <string name="tasks_students">مهام الدارسين</string>
    <string name="teacherPhoneNumber">0912836780</string>
    <string name="teacherName">Ahmed K Madani</string>
    <string name="teacherAddress">Khartoum - Sudan</string>
    <string name="createdDate">Now</string>
    <string name="add_teacher_name">اسم الشيخ</string>
    <string name="add_teacher_address">السكن</string>
    <string name="add_teacher_phone">الهاتف</string>
    <string name="add_teacher_password">كلمة السر</string>
    <string name="add_teacher">اضافة شيخ</string>
    <string name="eduction_level">مستوى الدراسي</string>
    <string name="student_name">اسم الدارس</string>
    <string name="add_student">اضافة دارس</string>
    <string name="workplace">مكان العمل</string>
    <string name="student_pasword">كلمة السر</string>
    <string name="student_phonenumber">الهاتف</string>
    <string name="pick_teacher">اختر الشيخ :</string>
    <string name="student_address">السكن</string>
    <string name="search">Search</string>
    <string name="delete_btn">مسح</string>
    <string name="edit_btn">تعديل</string>
    <string name="name_elshekh">اسم الشيخ:</string>

</resources>