<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="fill_parent"
android:layout_height="fill_parent"
android:background="@color/bg">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/view_student_appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/view_student_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

    </com.google.android.material.appbar.AppBarLayout>

    <EditText
        android:id="@+id/name_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:gravity="right"
        android:hint="اسم الدارس:"
        android:inputType="text"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textColorLink="@color/white"
        android:textCursorDrawable="@color/white"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/view_student_appBarLayout"
        android:autofillHints="" />

    <TextView
        android:id="@+id/teacherName_textView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="22dp"
        android:layout_marginRight="20dp"
        android:gravity="right"
        android:paddingBottom="4dp"
        android:text="@string/pick_teacher"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_editText" />

    <Spinner
        android:id="@+id/view_student_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="22dp"
        android:layout_marginRight="20dp"
        android:backgroundTint="@color/white"
        android:gravity="center"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textColorLink="@color/white"
        android:textCursorDrawable="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/teacherName_textView"
        tools:targetApi="lollipop" />

    <EditText
        android:id="@+id/address_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:gravity="right"
        android:hint=""
        android:inputType="text"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textColorLink="@color/white"
        android:textCursorDrawable="@color/white"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/view_student_spinner"
        android:autofillHints="" />

    <EditText
        android:id="@+id/phone_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:gravity="right"
        android:hint=""
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textColorLink="@color/white"
        android:textCursorDrawable="@color/white"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/address_editText"
        android:autofillHints="" />

    <EditText
        android:id="@+id/password_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:gravity="right"
        android:hint=""
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textColorLink="@color/white"
        android:textCursorDrawable="@color/white"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/phone_editText"
        android:autofillHints="" />

    <EditText
        android:id="@+id/work_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:gravity="right"
        android:hint=""
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textColorLink="@color/white"
        android:textCursorDrawable="@color/white"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/password_editText"
        android:autofillHints="" />

    <EditText
        android:id="@+id/edu_level_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:gravity="right"
        android:hint=""
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textColorLink="@color/white"
        android:textCursorDrawable="@color/white"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/work_editText"
        android:autofillHints="" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/edu_level_editText"
        app:layout_constraintStart_toStartOf="@+id/edu_level_editText"
        app:layout_constraintTop_toBottomOf="@+id/edu_level_editText">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/edit_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="50dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/round_corner"
            android:padding="12dp"
            android:text="@string/edit_btn"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="italic"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout5"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout5" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/delete_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/round_corner"
            android:padding="12dp"
            android:text="@string/delete_btn"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="italic" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>